[gd_scene load_steps=10 format=3 uid="uid://canmfhqjc5ro1"]

[ext_resource type="Script" path="res://enemy/mechakkero.gd" id="1_8mege"]
[ext_resource type="Texture2D" uid="uid://datfciev05sdl" path="res://assets/sprites/enemies/that annoying frog.png" id="1_u8giy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ht67x"]
atlas = ExtResource("1_u8giy")
region = Rect2(50, 0, 25, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmjon"]
atlas = ExtResource("1_u8giy")
region = Rect2(75, 0, 25, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_sac01"]
atlas = ExtResource("1_u8giy")
region = Rect2(25, 0, 25, 27)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bnkp"]
atlas = ExtResource("1_u8giy")
region = Rect2(0, 0, 25, 27)

[sub_resource type="SpriteFrames" id="SpriteFrames_dbrya"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht67x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmjon")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sac01")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_1bnkp")
}],
"loop": false,
"name": &"on_ground",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0m555"]
size = Vector2(18, 1.66667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ss761"]
size = Vector2(18, 11)

[node name="mechakkero" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_layer = 0
script = ExtResource("1_8mege")
SPEED = 20000.0
JUMP_VELOCITY = -500.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dbrya")
animation = &"jump"

[node name="timer_to_jump" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.33333, 12.5)
shape = SubResource("RectangleShape2D_0m555")

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1.33333, 7.83333)
shape = SubResource("RectangleShape2D_ss761")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.333333, -22.6667)
scale = Vector2(10.15, 3.625)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="timer_to_jump" to="." method="_on_timer_to_jump_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
